Add process bid method with docs
