# server/docs/swagger-output.json
@@ -36,7 +36,9 @@
   "paths": {
     "/": {
       "get": {
-        "tags": ["Redirect"],
+        "tags": [
+          "Redirect"
+        ],
         "summary": "Redirect to the API home page.",
         "description": "This is a redirect to the API home page.",
         "operationId": "redirect",
@@ -59,7 +61,9 @@
     },
     "/api/v1/auth/signup": {
       "post": {
-        "tags": ["Reg&Auth"],
+        "tags": [
+          "Reg&Auth"
+        ],
         "summary": "Sign up end-point.",
         "description": "This is the end-point to sign up in the system.",
         "operationId": "signup",
@@ -92,7 +96,9 @@
     },
     "/api/v1/auth/signin": {
       "get": {
-        "tags": ["Reg&Auth"],
+        "tags": [
+          "Reg&Auth"
+        ],
         "summary": "Sign in end-point.",
         "description": "This is the end-point to signin in the system.",
         "operationId": "signin",
@@ -152,7 +158,9 @@
     },
     "/api/v1/auth/signout": {
       "post": {
-        "tags": ["Reg&Auth"],
+        "tags": [
+          "Reg&Auth"
+        ],
         "summary": "Sign out end-point.",
         "description": "This is the end-point to sign out in the system and remove their refresh tokens permanently.",
         "operationId": "signout",
@@ -189,7 +197,9 @@
     },
     "/api/v1/auth/refresh": {
       "post": {
-        "tags": ["Reg&Auth"],
+        "tags": [
+          "Reg&Auth"
+        ],
         "summary": "Refresh of the access token end-point.",
         "description": "This is the end-point for the   access token.",
         "operationId": "refresh",
@@ -253,7 +263,9 @@
     },
     "/api/v1/user/profile": {
       "get": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Retrieve profile end-point.",
         "description": "This is the end-point to retrieve user profile.",
         "operationId": "retrieveProfile",
@@ -305,7 +317,9 @@
         ]
       },
       "put": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Update profile end-point.",
         "description": "This is the end-point to update user profile.",
         "operationId": "updateProfile",
@@ -360,7 +374,9 @@
         }
       },
       "delete": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Delete profile end-point.",
         "description": "This is the end-point to delete user profile.",
         "operationId": "deleteProfile",
@@ -407,7 +423,9 @@
     },
     "/api/v1/user/profile/restore": {
       "patch": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "summary": "Restore profile end-point.",
         "description": "This is the end-point to restore user profile.",
         "operationId": "restoreProfile",
@@ -460,7 +478,9 @@
     },
     "/api/v1/bids/": {
       "get": {
-        "tags": ["Bids&Comments"],
+        "tags": [
+          "Bids&Comments"
+        ],
         "summary": "Get bids end-point.",
         "description": "This is the end-point to get bids.",
         "operationId": "getBids",
@@ -511,7 +531,9 @@
         ]
       },
       "post": {
-        "tags": ["Bids&Comments"],
+        "tags": [
+          "Bids&Comments"
+        ],
         "summary": "Create bid end-point.",
         "description": "This is the end-point to create bid.",
         "operationId": "createBid",
@@ -568,7 +590,9 @@
     },
     "/api/v1/bids/{id}": {
       "get": {
-        "tags": ["Bids&Comments"],
+        "tags": [
+          "Bids&Comments"
+        ],
         "summary": "Get one bid end-point.",
         "description": "This is the end-point to get one bid.",
         "operationId": "getOneBid",
@@ -634,7 +658,12 @@
         ]
       },
       "patch": {
-        "description": "",
+        "tags": [
+          "Bids&Comments"
+        ],
+        "summary": "Process bid end-point.",
+        "description": "This is the end-point to process bid with email notification to user.",
+        "operationId": "processBid",
         "parameters": [
           {
             "name": "id",
@@ -643,11 +672,66 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "$ref": "#/components/parameters/IdInPath"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Response400Schema"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Response401Schema"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Response404Schema"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RequestProcessBidSchema"
+              }
+            }
           }
         }
       }
@@ -746,7 +830,9 @@
     },
     "/api/v1/": {
       "get": {
-        "tags": ["Greeting"],
+        "tags": [
+          "Greeting"
+        ],
         "summary": "Greeting HTML-page end-point.",
         "description": "This is a base greeting HTML-page of the API.",
         "operationId": "greeting",
@@ -808,7 +894,11 @@
     "schemas": {
       "RequestSignUpSchema": {
         "type": "object",
-        "required": ["username", "email", "password"],
+        "required": [
+          "username",
+          "email",
+          "password"
+        ],
         "properties": {
           "username": {
             "type": "string",
@@ -854,10 +944,14 @@
       },
       "RequestSignInSchema": {
         "type": "object",
-        "required": ["password"],
+        "required": [
+          "password"
+        ],
         "oneOf": [
           {
-            "required": ["username"],
+            "required": [
+              "username"
+            ],
             "properties": {
               "username": {
                 "type": "string",
@@ -867,7 +961,9 @@
             }
           },
           {
-            "required": ["email"],
+            "required": [
+              "email"
+            ],
             "properties": {
               "email": {
                 "type": "string",
@@ -923,10 +1019,14 @@
       },
       "RequestRestoreProfileSchema": {
         "type": "object",
-        "required": ["password"],
+        "required": [
+          "password"
+        ],
         "oneOf": [
           {
-            "required": ["username"],
+            "required": [
+              "username"
+            ],
             "properties": {
               "username": {
                 "type": "string",
@@ -936,7 +1036,9 @@
             }
           },
           {
-            "required": ["email"],
+            "required": [
+              "email"
+            ],
             "properties": {
               "email": {
                 "type": "string",
@@ -956,7 +1058,9 @@
       },
       "RequestCreateBidSchema": {
         "type": "object",
-        "required": ["message"],
+        "required": [
+          "message"
+        ],
         "properties": {
           "message": {
             "type": "string",
@@ -965,9 +1069,24 @@
           }
         }
       },
+      "RequestProcessBidSchema": {
+        "type": "object",
+        "required": [
+          "status"
+        ],
+        "properties": {
+          "status": {
+            "type": "string",
+            "example": "pending",
+            "description": "Bid status"
+          }
+        }
+      },
       "ResponseSuccessfulAuthenticationRefreshSchema": {
         "type": "object",
-        "required": ["accessToken"],
+        "required": [
+          "accessToken"
+        ],
         "properties": {
           "accessToken": {
             "type": "string",
@@ -1051,7 +1170,12 @@
       },
       "ResponseGetBidsSchema": {
         "type": "object",
-        "required": ["bids", "count", "limit", "offset"],
+        "required": [
+          "bids",
+          "count",
+          "limit",
+          "offset"
+        ],
         "properties": {
           "count": {
             "type": "number",
@@ -1087,7 +1211,15 @@
       },
       "ResponseGetOneBidSchema": {
         "type": "object",
-        "required": ["id", "status", "message", "authorId", "createdAt", "updatedAt", "deletedAt"],
+        "required": [
+          "id",
+          "status",
+          "message",
+          "authorId",
+          "createdAt",
+          "updatedAt",
+          "deletedAt"
+        ],
         "properties": {
           "id": {
             "type": "string",
@@ -1128,7 +1260,9 @@
       },
       "Response400Schema": {
         "type": "object",
-        "required": ["message"],
+        "required": [
+          "message"
+        ],
         "properties": {
           "message": {
             "type": "string",
@@ -1139,7 +1273,9 @@
       },
       "Response401Schema": {
         "type": "object",
-        "required": ["message"],
+        "required": [
+          "message"
+        ],
         "properties": {
           "message": {
             "type": "string",
@@ -1150,7 +1286,9 @@
       },
       "Response404Schema": {
         "type": "object",
-        "required": ["message"],
+        "required": [
+          "message"
+        ],
         "properties": {
           "message": {
             "type": "string",
