# server/router/bids.js
@@ -3,7 +3,7 @@ import bidsController from "../controllers/bids.js";
 import commentsController from "../controllers/comments.js";
 import validateJwt from "../middleware/jwtValidation.js";
 import validateRequest from "../middleware/requestValidation.js";
-import { createBidSchema, getBidSchema, getBidsListSchema } from "../utils/validationSchemas/bid.js";
+import { createBidSchema, getBidSchema, getBidsListSchema, processBidSchema } from "../utils/validationSchemas/bid.js";
 
 const router = express.Router();
 
@@ -15,9 +15,12 @@ router
 router
   .route("/:id")
   .get(validateJwt, validateRequest(getBidSchema), bidsController.getOneBid)
-  .patch(bidsController.processBid);
+  .patch(validateJwt, validateRequest(processBidSchema), bidsController.processBid);
 
-router.route("/:id/comments").get(commentsController.getComments).post(commentsController.createComment);
+router
+  .route("/:id/comments")
+  .get(commentsController.getComments)
+  .post(commentsController.createComment);
 
 router
   .route("/:id/comments/:commentId")
